<resources>
    <string name="app_name">MuhingaLayoutPrototypes</string>
    <string name="max_price">Max price</string>
    <string name="ALL">ALL</string>
    <string name="Add_filters">ADD FILTERS</string>
    <string name="email_is_required">Email and Password are required fields!</string>
    <string name="warning">Warning</string>
    <string name="error">ERROR</string>
    <string name="success">Success</string>
    <string name="you_must_agree_to_t_and_c">You must agree to the terms and conditions</string>


    <string name="my_app_name">Muhinga</string>
    <string name="history">History</string>
    <string name="saved">Saved</string>
    <string name="wallet">Wallet</string>
    <string name="profile">Profile</string>
    <string name="rent">Rent</string>
    <string name="land">Land</string>
    <string name="houses">Houses</string>
    <string name="transport">Transport</string>
    <string name="events">Events</string>
    <string name="goods">Goods</string>
    <string name="shop">Shop</string>
    <string name="hotels">Hotels</string>
    <string name="venues">Venues</string>
    <string name="shipping">Shipping</string>
    <string name="HousesActivityLabel">Houses</string>
    <string name="filter">Filter</string>
    <string name="ForSale">For Sale</string>
    <string name="ForRent">For Rent</string>
    <string name="services">Services</string>
    <string name="location">Location</string>
    <string name="max_size">max size</string>
    <string name="go">Go</string>
    <string name="add_filters">Add Filters</string>
    <string name="title">Title</string>
    <string name="browse_artists">Browse artists</string>
    <string name="artists_image">Artists\' image</string>
    <string name="artists_cover_image">Artists\' cover image</string>
    <string name="refresh">refresh</string>
    <string name="account">account</string>
    <string name="music">Music</string>
    <string name="call">Call</string>
    <string name="book">Book</string>
    <string name="share">Share</string>
    <string name="save">save</string>
    <string name="capacity">Capacity</string>
    <string name="capacitycolon">Capacity:</string>
    <string name="buy">Buy</string>
    <string name="artists">Artists</string>
    <string name="liked">Liked</string>
    <string name="contact_artist">Contact artist</string>
    <string name="settings">Settings</string>
    <string name="sign_up">Sign up</string>
    <string name="purchase">Purchase</string>
    <string name="e_mail">E-Mail</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="password">Password</string>
    <string name="muhinga">MUHINGA</string>
    <string name="submit">Submit</string>
    <string name="sign_up_caps">SIGN UP</string>
    <string name="sign_in_caps">SIGN IN</string>
    <string name="have_an_account">Have an account?</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to email -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="stay_signed_in">Stay signed in</string>
    <string name="log_out">LOG OUT</string>
    <string name="username">User Name</string>
    <string name="name">Full Name</string>
    <string name="delete_account">Delete Account</string>
    <string name="House_details">House details</string>
    <string name="land_details">Land details</string>
    <string name="share_using">Share using</string>
    <string name="tour">Tour</string>
    <string name="view_house">View house</string>
    <string name="available_viewing_dates">Available viewing dates</string>
    <string name="okay">okay</string>
    <string name="contact_owner_for_more_details">Contact owner for more details</string>
    <string name="cancel">Cancel</string>
    <string name="categories">Categories</string>
    <string name="saved_items">Saved Items</string>
    <string name="saved_categories">Saved Categories</string>


</resources>
