<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_yellow_50"
    tools:context=".SignUp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_yellow_50">



        <TextView
            android:id="@+id/sign_up_app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/muhinga"
            android:textAlignment="center"
            android:textColor="@color/my_color_secondary"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sign_up_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sign_up_caps"
            android:textAlignment="center"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_app_name" />


        <com.github.florent37.materialtextfield.MaterialTextField
            android:id="@+id/mtf_sign_up_first_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_heading"
            app:mtf_image="@drawable/name_black_filled"
            app:mtf_labelColor="#666">

            <EditText
                android:id="@+id/sign_up_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:textColor="#333"
                android:textSize="15sp" />

        </com.github.florent37.materialtextfield.MaterialTextField>


        <com.github.florent37.materialtextfield.MaterialTextField
            android:id="@+id/mtf_sign_up_last_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mtf_sign_up_first_name"
            app:mtf_image="@drawable/name_black_filled"
            app:mtf_labelColor="#666">

            <EditText
                android:id="@+id/sign_up_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:textColor="#333"
                android:textSize="15sp" />

        </com.github.florent37.materialtextfield.MaterialTextField>


        <com.github.florent37.materialtextfield.MaterialTextField
            android:id="@+id/mtf_sign_up_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mtf_sign_up_last_name"
            app:mtf_image="@drawable/mail_black_filled"
            app:mtf_labelColor="#666">

            <EditText
                android:id="@+id/sign_up_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_mail"
                android:textColor="#333"
                android:textSize="15sp" />

        </com.github.florent37.materialtextfield.MaterialTextField>


        <com.github.florent37.materialtextfield.MaterialTextField
            android:id="@+id/mtf_sign_up_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mtf_sign_up_email"
            app:mtf_image="@drawable/password_black_filled"
            app:mtf_labelColor="#666">

            <EditText
                android:id="@+id/sign_up_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColor="#333"
                android:textSize="15sp" />

        </com.github.florent37.materialtextfield.MaterialTextField>


        <Button
            android:id="@+id/sign_up_submit_button"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:background="@color/my_color_secondary"
            android:text="@string/submit"
            android:textColor="@color/my_color_white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mtf_sign_up_password" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
android:paddingBottom="40dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_up_submit_button">

            <TextView
                android:id="@+id/sign_up_prompt_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_an_account"
                android:textColor="@color/my_color_secondary"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/sign_up_sign_in_prompt_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/sign_in_caps"
                android:textColor="@color/my_color_primary_darker_shade"
                android:textSize="15sp" />

        </LinearLayout>


    </android.support.constraint.ConstraintLayout>


</ScrollView>





