<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_yellow_50"
    tools:context=".Login">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/sign_in_app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/muhinga"
            android:textAlignment="center"
            android:textColor="@color/my_color_secondary"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sign_in_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sign_in"
            android:textAlignment="center"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_app_name" />








        <com.github.florent37.materialtextfield.MaterialTextField
            android:id="@+id/mtf_sign_in_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_in_heading"
            app:mtf_image="@drawable/mail_black_filled"
            app:mtf_labelColor="#666">

            <EditText
                android:id="@+id/sign_in_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_mail"
                android:textColor="#333"
                android:textSize="15sp" />

        </com.github.florent37.materialtextfield.MaterialTextField>


        <com.github.florent37.materialtextfield.MaterialTextField
            android:id="@+id/mtf_sign_in_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mtf_sign_in_email"
            app:mtf_image="@drawable/password_black_filled"
            app:mtf_labelColor="#666">

            <EditText
                android:inputType="textPassword"
                android:id="@+id/sign_in_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColor="#333"
                android:textSize="15sp" />

        </com.github.florent37.materialtextfield.MaterialTextField>


        <CheckBox
            android:id="@+id/sign_in_stay_signed_in_checkbox"
            android:layout_marginStart="64dp"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mtf_sign_in_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stay_signed_in"
            android:textSize="15sp"
            android:textColor="@color/my_color_secondary"
            />


        <CheckBox
            android:id="@+id/sign_in_terms_and_conditions_checkbox"
            android:layout_marginStart="64dp"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_stay_signed_in_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="I agree to the terms and conditions"
            android:textSize="15sp"
            android:textColor="@color/my_color_secondary"
            />








        <Button
            android:id="@+id/sign_in_submit_button"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:background="@color/my_color_secondary"
            android:text="@string/submit"
            android:textColor="@color/my_color_white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_terms_and_conditions_checkbox" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:paddingBottom="40dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_submit_button">

            <TextView
                android:id="@+id/sign_in_prompt_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/my_color_secondary"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/sign_in_sign_up_prompt_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/sign_up"
                android:textColor="@color/my_color_primary_darker_shade"
                android:textSize="15sp" />

        </LinearLayout>


    </android.support.constraint.ConstraintLayout>

</ScrollView>