<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/services_user_area_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="15dp">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/services"
        android:textSize="15sp"
        app:fontFamily="@font/montserrat_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/houses_services_user_area"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/houses"
        android:textSize="12sp"
        app:fontFamily="@font/montserrat_regular"
        app:layout_constraintEnd_toEndOf="@+id/houses_services_user_area"
        app:layout_constraintStart_toStartOf="@+id/houses_services_user_area"
        app:layout_constraintTop_toBottomOf="@+id/houses_services_user_area" />


    <ImageView
        android:id="@+id/land_services_user_area"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/houses_services_user_area"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/land"
        android:textSize="12sp"
        app:fontFamily="@font/montserrat_regular"
        app:layout_constraintEnd_toEndOf="@+id/land_services_user_area"
        app:layout_constraintStart_toStartOf="@+id/land_services_user_area"
        app:layout_constraintTop_toBottomOf="@+id/land_services_user_area" />


    <ImageView
        android:id="@+id/venues_services_user_area"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/venues"
        android:textSize="12sp"
        app:fontFamily="@font/montserrat_regular"
        app:layout_constraintEnd_toEndOf="@+id/venues_services_user_area"
        app:layout_constraintStart_toStartOf="@+id/venues_services_user_area"
        app:layout_constraintTop_toBottomOf="@+id/venues_services_user_area" />


    <ImageView
        android:id="@+id/music_services_user_area"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/venues_services_user_area"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/music"
        android:textSize="12sp"
        app:fontFamily="@font/montserrat_regular"
        app:layout_constraintEnd_toEndOf="@+id/music_services_user_area"
        app:layout_constraintStart_toStartOf="@+id/music_services_user_area"
        app:layout_constraintTop_toBottomOf="@+id/music_services_user_area" />


</android.support.constraint.ConstraintLayout>