<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <include
        android:id="@+id/land_home_app_bar"
        layout="@layout/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="3dp"
        app:cardElevation="1dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:orientation="horizontal"

                >


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/montserrat_medium"
                    android:gravity="center_vertical"
                    android:text="@string/location"
                    android:textAlignment="center"
                    android:textSize="12sp" />

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    app:cardCornerRadius="4dp">

                    <Spinner
                        android:id="@+id/land_home_location_spinner"
                        android:layout_width="72dp"
                        android:layout_height="32dp"
                        android:prompt="@string/location"
                        app:fontFamily="@font/montserrat_regular"

                        />

                </android.support.v7.widget.CardView>


                <EditText
                    android:id="@+id/land_max_price_edit_text"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:gravity="center_horizontal"
                    android:hint="@string/max_price"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textColorHint="@color/my_color_secondary"
                    android:textSize="12sp"
                    app:fontFamily="@font/montserrat_regular" />


                <EditText
                    android:id="@+id/land_max_size_edit_text"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:gravity="center_horizontal"
                    android:hint="@string/max_size"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textColorHint="@color/my_color_secondary"
                    android:textSize="12sp"
                    app:fontFamily="@font/montserrat_regular" />

            </LinearLayout>


            <Button
                android:id="@+id/submit_land_filter_button"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:background="@color/my_color_bg"
                android:text="@string/filter"
                android:textAllCaps="false"
                android:textColor="@color/my_color_secondary"

                android:textSize="12sp"
                app:fontFamily="@font/montserrat_regular" />


        </LinearLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="@string/land"
        android:textColor="@color/my_color_secondary"
        android:textSize="12sp"

        app:fontFamily="@font/montserrat_bold" />


    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/land_swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/land_activity_rec_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="7dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="10dp"
            android:scrollbars="vertical" />

    </android.support.v4.widget.SwipeRefreshLayout>


</LinearLayout>